user quiz result, resume and end featured added